Fixed left aligned paragraphs

--- a/css/style.css
+++ b/css/style.css
@@ -117,9 +117,12 @@ h4 {
 
 p {
   font-family: "TheSansMono", "Roboto Mono", monospace;
-  margin: 0 auto 1.4em;
+  margin: 0 0 1.4em;
   line-height: 1.7em;
   max-width: 48em; }
+  p.text-centre {
+    margin-left: auto;
+    margin-right: auto; }
 
 p:last-child {
   margin-bottom: 0; }
@@ -424,9 +427,12 @@ h4 {
 
 p {
   font-family: "TheSansMono", "Roboto Mono", monospace;
-  margin: 0 auto 1.4em;
+  margin: 0 0 1.4em;
   line-height: 1.7em;
   max-width: 48em; }
+  p.text-centre {
+    margin-left: auto;
+    margin-right: auto; }
 
 p:last-child {
   margin-bottom: 0; }
@@ -678,9 +684,12 @@ h4 {
 
 p {
   font-family: "TheSansMono", "Roboto Mono", monospace;
-  margin: 0 auto 1.4em;
+  margin: 0 0 1.4em;
   line-height: 1.7em;
   max-width: 48em; }
+  p.text-centre {
+    margin-left: auto;
+    margin-right: auto; }
 
 p:last-child {
   margin-bottom: 0; }
